Add and document /ping endpoint
