# src/main/kotlin/org/team1540/cluck/backend/controllers/PingController.kt
@@ -1,0 +1,12 @@
+package org.team1540.cluck.backend.controllers
+
+import org.springframework.web.bind.annotation.RequestMapping
+import org.springframework.web.bind.annotation.RestController
+
+@RestController
+class PingController {
+    @RequestMapping("/ping")
+    fun ping() {
+
+    }
+}
